# fastmeteo

./: pyproject.toml
