[project]
name = "fastmeteo"
description = "Fast interpolation for ERA5 data with Zarr"
version = "0.2.1"
authors = ["Junzi Sun <j.sun-1@tudelft.nl>"]
license = "GNU Lesser General Public License v3 (LGPLv3)"
readme = "readme.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "dask>=2024.11.2",
    "fastapi>=0.115.5",
    "fsspec>=2024.10.0",
    "gcsfs>=2024.10.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.7.4",
    "scipy>=1.14.1",
    "uvicorn>=0.32.0",
    "xarray>=2024.10.0",
    "zarr>=2.18.3",
]
